--- a/app/src/main/res/layout/activity_show_single_blog.xml
+++ b/app/src/main/res/layout/activity_show_single_blog.xml
@@ -43,10 +43,9 @@
                 android:id="@+id/singleBlogImage"
                 android:layout_width="0dp"
                 android:layout_height="300dp"
+                android:maxHeight="300dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/follow_bg"
                 android:scaleType="fitXY"
-                android:src="@drawable/korg"
                 app:layout_constraintEnd_toEndOf="@id/blogCreationDate"
                 app:layout_constraintStart_toStartOf="@+id/singleBlogAuthor"
                 app:layout_constraintTop_toBottomOf="@+id/singleBlogAuthor" />
