--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -44,11 +44,11 @@
                 android:text="Esports" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/tournamentChip"
+                android:id="@+id/consoleChip"
                 style="@style/CustomChipStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Tournaments" />
+                android:text="Consoles" />
 
         </com.google.android.material.chip.ChipGroup>
 
