--- a/app/src/main/res/layout/activity_show_single_post.xml
+++ b/app/src/main/res/layout/activity_show_single_post.xml
@@ -32,7 +32,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="fitCenter"
-                            app:srcCompat="@drawable/korg" />
+                            />
 
                     </androidx.cardview.widget.CardView>
 
@@ -56,8 +56,7 @@
                     android:maxHeight="450dp"
                     android:adjustViewBounds="true"
                     android:cropToPadding="true"
-                    android:scaleType="fitXY"
-                    app:srcCompat="@drawable/korg_transparent" />
+                    android:scaleType="fitXY" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
